添加 url 参数记录和解析

--- a/src/__plays__/Renderer.play.css
+++ b/src/__plays__/Renderer.play.css
@@ -18,6 +18,13 @@
   bottom: 0;
   padding: 0.5em;
 }
+#preview > #label > * {
+  display: block;
+  font-size: 0.9em;
+  line-height: 1em;
+  border-left: #000 1em solid;
+  padding-left: 0.5em;
+}
 #preview > #position {
   position: absolute;
   display: none;
